--- a/contents/docs/self-host/configure/securing-posthog.mdx
+++ b/contents/docs/self-host/configure/securing-posthog.mdx
@@ -69,7 +69,7 @@ make it is secure to threat actors. As every installation is unique, we provide
 in our documentation some general guidelines regarding how to make it secure but
 it is then up to each instance admin to make sure all the best practices are followed.
 
-1. make sure your Kubernetes cluster is provisioned and configured using industries
+1. Make sure your Kubernetes cluster is provisioned and configured using industries
    best practices
     1. encrypt data at rest and in transit
     1. minimize access to worker nodes
@@ -77,6 +77,4 @@ it is then up to each instance admin to make sure all the best practices are fol
     1. enable Kubernetes audit logs
     1. employ least privileged access for all the resources
     1. ...
-1. make sure your installation is regularly maintained and up-to-date
-1. for specific Helm chart configuration
-   guidelines, take a look [here](/docs/self-host/deploy/configuration)
+1. Make sure your installation is regularly maintained and up-to-date
